--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -1,4 +1,6 @@
-﻿@using Feature.Wealth.Component.Models.IndexRecommendation
+﻿@using Foundation.Wealth.Helper;
+@using Feature.Wealth.Component.Models.Invest;
+@using Feature.Wealth.Component.Models.IndexRecommendation
 @model IndexRecommendationModel
 
 @if (Model == null)
@@ -155,7 +157,7 @@
 												<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
 											</div>
 											<div class="c-cardTable__content">
-												<a href="#popupCurrencyWebSite" class="o-link" data-popup="true">@item.CurrencyName</a>
+												@Html.CurrencyLink(null, item.CurrencyName)
 											</div>
 										</td>
 										<td class="c-cardTable__body" data-card-table-width="1/2">
@@ -191,27 +193,22 @@
 											<div class="c-cardTable__content">
 												<ul class="l-collect l-collect--divider@lt">
 													<li class="l-collect__item">
-														<!-- [data-after-lt]: pad / mobile 自動顯示文字，值為要顯示的文字 --><!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
-														<!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-														<a href="#" class="o-statusBtn o-statusBtn--like" data-after-lt="關注" data-msg="加入關注|取消關注" data-ia="true"></a>
+														@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
 													</li>
 													<li class="l-collect__item">
-														<!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
-														<!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
-														<!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-														<a href="#" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-ia="true"></a>
+														@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
 													</li>
 												</ul>
 											</div>
 										</td>
+										@if (item.OnlineSubscriptionAvailability == "Y")
+										{
 										<td class="c-cardTable__footer" data-card-table-width="1/3">
 											<div class="c-cardTable__content">
-											@if (item.OnlineSubscriptionAvailability == "Y")
-											{
-												<a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a>
-											}
+												@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.Fund, true)
 											</div>
 										</td>
+										}
 									</tr>
 								}
 							</tbody>
