ETF漲跌排序問題、CSS用背景圖、比較按鈕不談窗登入

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MarketTrend/MarketTrend.cshtml
@@ -309,8 +309,8 @@
                                                 <option value="市價低至高" data-sorting-column="NetAssetValue" data-sorting-class="is-asc">市價低至高</option>
                                                 <option value="幣別高至低" data-sorting-column="CurrencyName" data-sorting-class="is-desc">幣別高至低</option>
                                                 <option value="幣別低至高" data-sorting-column="CurrencyName" data-sorting-class="is-asc">幣別低至高</option>
-                                                <option value="漲跌幅高至低" data-sorting-column="change" data-sorting-class="is-desc">漲跌幅高至低</option>
-                                                <option value="漲跌幅低至高" data-sorting-column="change" data-sorting-class="is-asc">漲跌幅低至高</option>
+                                                <option value="漲跌幅高至低" data-sorting-column="Change" data-sorting-class="is-desc">漲跌幅高至低</option>
+                                                <option value="漲跌幅低至高" data-sorting-column="Change" data-sorting-class="is-asc">漲跌幅低至高</option>
                                                 <option value="6個月績效高至低" data-sorting-column="M6Change" data-sorting-class="is-desc">6個月績效高至低</option>
                                                 <option value="6個月績效低至高" data-sorting-column="M6Change" data-sorting-class="is-asc">6個月績效低至高</option>
                                             </select>
@@ -422,7 +422,7 @@
                                                 <th>
                                                     <div class="c-table__title">
                                                         <span>漲跌幅</span>
-                                                        <a href="#" class="o-sorting" data-sorting-column="change"></a>
+                                                        <a href="#" class="o-sorting" data-sorting-column="Change"></a>
                                                     </div>
                                                 </th>
                                                 <th>
@@ -756,8 +756,8 @@
                                                 <option value="市價低至高" data-sorting-column="NetAssetValue" data-sorting-class="is-asc">市價低至高</option>
                                                 <option value="幣別高至低" data-sorting-column="CurrencyName" data-sorting-class="is-desc">幣別高至低</option>
                                                 <option value="幣別低至高" data-sorting-column="CurrencyName" data-sorting-class="is-asc">幣別低至高</option>
-                                                <option value="漲跌幅高至低" data-sorting-column="change" data-sorting-class="is-desc">漲跌幅高至低</option>
-                                                <option value="漲跌幅低至高" data-sorting-column="change" data-sorting-class="is-asc">漲跌幅低至高</option>
+                                                <option value="漲跌幅高至低" data-sorting-column="Change" data-sorting-class="is-desc">漲跌幅高至低</option>
+                                                <option value="漲跌幅低至高" data-sorting-column="Change" data-sorting-class="is-asc">漲跌幅低至高</option>
                                                 <option value="6個月績效高至低" data-sorting-column="M6Change" data-sorting-class="is-desc">6個月績效高至低</option>
                                                 <option value="6個月績效低至高" data-sorting-column="M6Change" data-sorting-class="is-asc">6個月績效低至高</option>
                                             </select>
@@ -869,7 +869,7 @@
                                                 <th>
                                                     <div class="c-table__title">
                                                         <span>漲跌幅</span>
-                                                        <a href="#" class="o-sorting" data-sorting-column="change"></a>
+                                                        <a href="#" class="o-sorting" data-sorting-column="Change"></a>
                                                     </div>
                                                 </th>
                                                 <th>
@@ -1203,8 +1203,8 @@
                                                 <option value="市價低至高" data-sorting-column="NetAssetValue" data-sorting-class="is-asc">市價低至高</option>
                                                 <option value="幣別高至低" data-sorting-column="CurrencyName" data-sorting-class="is-desc">幣別高至低</option>
                                                 <option value="幣別低至高" data-sorting-column="CurrencyName" data-sorting-class="is-asc">幣別低至高</option>
-                                                <option value="漲跌幅高至低" data-sorting-column="change" data-sorting-class="is-desc">漲跌幅高至低</option>
-                                                <option value="漲跌幅低至高" data-sorting-column="change" data-sorting-class="is-asc">漲跌幅低至高</option>
+                                                <option value="漲跌幅高至低" data-sorting-column="Change" data-sorting-class="is-desc">漲跌幅高至低</option>
+                                                <option value="漲跌幅低至高" data-sorting-column="Change" data-sorting-class="is-asc">漲跌幅低至高</option>
                                                 <option value="6個月績效高至低" data-sorting-column="M6Change" data-sorting-class="is-desc">6個月績效高至低</option>
                                                 <option value="6個月績效低至高" data-sorting-column="M6Change" data-sorting-class="is-asc">6個月績效低至高</option>
                                             </select>
@@ -1316,7 +1316,7 @@
                                                 <th>
                                                     <div class="c-table__title">
                                                         <span>漲跌幅</span>
-                                                        <a href="#" class="o-sorting" data-sorting-column="change"></a>
+                                                        <a href="#" class="o-sorting" data-sorting-column="Change"></a>
                                                     </div>
                                                 </th>
                                                 <th>
@@ -1497,7 +1497,7 @@
                         <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
                         <!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
                         <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-popup="true"></a>
+                        <a href="#" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-ia="true"></a>
                     </li>
                 </ul>
             </div>
@@ -1584,7 +1584,7 @@
                         <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
                         <!-- [data-ia="true"]: 互動式按鈕功能，hover 顯示 tooltip，點擊後顯示結果訊息 -->
                         <!-- [data-msg]: hover/click 時顯示的提示內容，normal / active 狀態的訊息以 "|" 符號分隔 -->
-                        <a href="#popupLogin" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-popup="true"></a>
+                        <a href="#" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-ia="true"></a>
                     </li>
                 </ul>
             </div>
