Update: Add View Trigger('exec')

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -217,6 +217,9 @@
 						$('#result').empty();
 						document.getElementById('result').innerHTML = data;
 						$('[data-popup]').magnificPopup();
+						$('[eh-compare]').trigger('exec');
+						$('[eh-focus]').trigger('exec');
+						$('[eh-subscription-type]').trigger('exec');
 						window.loading('hide');
 					},
 					error: function (xhr, status, error) {
