--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFund.cshtml
@@ -165,7 +165,9 @@
                             $('#result').empty();
                             document.getElementById('result').innerHTML = data;
                             $('[data-popup]').magnificPopup();
-
+                            $('[eh-compare]').trigger('exec');
+                            $('[eh-focus]').trigger('exec');
+                            $('[eh-subscription-type]').trigger('exec');
                             $('span.o-fall').each(function () {
                                 var content = $(this).text();
                                 if (content.startsWith('-')) {
