Update: 取得瀏覽次數

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -45,8 +45,8 @@
                         <div class="c-pageHeader__subContent">
                             <h2 class="c-pageHeader__subTitle">@etfData.ETFEnglishName</h2>
                         </div>
-                        <div class="c-pageHeader__views" data-eh="visit-exec">
-                            <div class="o-views o-views--bk" eh-visit eh-visit-pageid="@pageId" eh-visit-qs="id=@etfData.ProductCode"></div>
+                        <div class="c-pageHeader__views">
+                            <div class="o-views o-views--bk" data-eh="visit-update,visit-exec" eh-visit-pageid="@pageId" eh-visit-qs="id=@etfData.ProductCode"></div>
                         </div>
                     </div>
                 </div>
