Update：K線圖日期顯示調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
@@ -250,7 +250,8 @@
                                             const format = {
                                                 day: '%Y/%m',
                                                 week: '%Y/%m',
-                                                month: '%Y/%m'
+                                                month: '%Y/%m',
+                                                year: '%Y/%m'
                                             }[this.tickPositionInfo.unitName];
                                             return Highcharts.dateFormat(format, this.value);
                                         },
