--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicCards/Graphic3Cards.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicCards/Graphic3Cards.cshtml
@@ -19,9 +19,14 @@
                             <div class="c-feature__content">
                                 <h3 class="c-feature__title">@Html.Sitecore().Field(Templates.GraphicCards.Fields.Title1.ToString(), Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Templates.GraphicCards.Fields.SubTitle1.ToString(), Model.Item)</p>
+                                @if (!string.IsNullOrEmpty(Model.ButtonLink1) || !string.IsNullOrEmpty(Model.ButtonText1))
+                                {
                                 <div class="c-feature__actions">
-                                    <a href="@Model.ButtonLink1" class="o-btn o-btn--primary o-btn--thin o-btn--auto">@Html.Sitecore().Field(Templates.GraphicCards.Fields.ButtonText1.ToString(), Model.Item)</a>
+                                    @Html.Sitecore().BeginField(Templates.GraphicCards.Fields.ButtonLink1.ToString(), Model.Item, new { haschildren = true, @class = "o-btn o-btn--primary o-btn--thin o-btn--auto" })
+                                    @Html.Sitecore().Field(Templates.GraphicCards.Fields.ButtonText1.ToString(), Model.Item)
+                                    @Html.Sitecore().EndField()
                                 </div>
+                                }
                             </div>
                             <div class="c-feature__plate">
                                 <img src="@Model.ImageUrl1" srcset="" alt="" class="c-feature__img">
@@ -33,9 +38,14 @@
                             <div class="c-feature__content">
                                 <h3 class="c-feature__title">@Html.Sitecore().Field(Templates.GraphicCards.Fields.Title2.ToString(), Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Templates.GraphicCards.Fields.SubTitle2.ToString(), Model.Item)</p>
-                                <div class="c-feature__actions">
-                                    <a href="@Model.ButtonLink2" class="o-btn o-btn--primary o-btn--thin o-btn--auto">@Html.Sitecore().Field(Templates.GraphicCards.Fields.ButtonText2.ToString(), Model.Item)</a>
-                                </div>
+                                @if (!string.IsNullOrEmpty(Model.ButtonLink2) || !string.IsNullOrEmpty(Model.ButtonText2))
+                                {
+                                    <div class="c-feature__actions">
+                                        @Html.Sitecore().BeginField(Templates.GraphicCards.Fields.ButtonLink2.ToString(), Model.Item, new { haschildren = true, @class = "o-btn o-btn--primary o-btn--thin o-btn--auto" })
+                                        @Html.Sitecore().Field(Templates.GraphicCards.Fields.ButtonText2.ToString(), Model.Item)
+                                        @Html.Sitecore().EndField()
+                                    </div>
+                                }
                             </div>
                             <div class="c-feature__plate">
                                 <img src="@Model.ImageUrl2" srcset="" alt="" class="c-feature__img">
@@ -49,9 +59,14 @@
                             <div class="c-feature__content u-center">
                                 <h3 class="c-feature__title">@Html.Sitecore().Field(Templates.GraphicCards.Fields.Title3.ToString(), Model.Item)</h3>
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Templates.GraphicCards.Fields.SubTitle3.ToString(), Model.Item)</p>
-                                <div class="c-feature__actions">
-                                    <a href="@Model.ButtonLink3" class="o-btn o-btn--primary o-btn--thin o-btn--auto">@Html.Sitecore().Field(Templates.GraphicCards.Fields.ButtonText3.ToString(), Model.Item)</a>
-                                </div>
+                                @if (!string.IsNullOrEmpty(Model.ButtonLink3) || !string.IsNullOrEmpty(Model.ButtonText3))
+                                {
+                                    <div class="c-feature__actions">
+                                        @Html.Sitecore().BeginField(Templates.GraphicCards.Fields.ButtonLink3.ToString(), Model.Item, new { haschildren = true, @class = "o-btn o-btn--primary o-btn--thin o-btn--auto" })
+                                        @Html.Sitecore().Field(Templates.GraphicCards.Fields.ButtonText3.ToString(), Model.Item)
+                                        @Html.Sitecore().EndField()
+                                    </div>
+                                }
                             </div>
                             <div class="c-feature__plate">
                                 <img src="@Model.ImageUrl3" srcset="" alt="" class="c-feature__img">
