買賣價尚無對應欄位，先以 '-' 呈現

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
@@ -19,7 +19,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>價格</span></div>
                             <div class="c-numerical__content">
 
-                                <span>48.9100(美元)</span>
+                                <span>-</span>
                             </div>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>漲跌/漲跌幅</span></div>
                             <div class="c-numerical__content">
 
-                                <span class="o-rise">0.10</span> / <span class="o-rise">0.10%</span>
+                                <span class="o-rise">-</span> / <span class="o-rise">-</span>
                             </div>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>最高價格(年)</span></div>
                             <div class="c-numerical__content">
 
-                                <span>59.0800</span>
+                                <span>-</span>
                             </div>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>最低價格(年)</span></div>
                             <div class="c-numerical__content">
 
-                                <span>44.5200</span>
+                                <span>-</span>
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>價格</span></div>
                             <div class="c-numerical__content">
 
-                                <span>48.9100(美元)</span>
+                                <span>-</span>
                             </div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>漲跌/漲跌幅</span></div>
                             <div class="c-numerical__content">
 
-                                <span class="o-rise">0.10</span> / <span class="o-rise">0.10%</span>
+                                <span class="o-rise">-</span> / <span class="o-rise">-</span>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>最高價格(年)</span></div>
                             <div class="c-numerical__content">
 
-                                <span>59.0800</span>
+                                <span>-</span>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                             <div class="c-numerical__title c-numerical__title--dk"><span>最低價格(年)</span></div>
                             <div class="c-numerical__content">
 
-                                <span>44.5200</span>
+                                <span>-</span>
                             </div>
                         </div>
                     </div>
@@ -446,7 +446,7 @@
                         ...obj
                     };
 
-                    // 呼叫 API ETF詳細頁 – 績效/淨值 - 市價/淨值走勢
+                    // 呼叫 API ETF詳細頁 – 績效/淨值 - 買賣價走勢
                     var query = apiRequest('@ETFHistoryPriceApiUrl', params);
                     query.then((data) => {
                         if (Object.keys(data).length != 0
